# Restima

./: LICENSE  pyproject.toml  readme.md
core/: estimator.py
src/restima/: cli.py  router.py
src/restima/api/: server.py
src/restima/core/: drift_detector.py  estimator.py  evaluator.py  features.py  formatter.py  monitor_service.py  predictor.py  registry.py  trainer.py
src/restima/inputs/: from_flowaudit.py  from_log.py  from_otel.py  from_service.py  from_trace.py
src/restima/outputs/: to_slack.py  to_terraform.py
src/tests/: test_estima_integration.py  test_estimator.py
