[project]
name = "restima"
version = "0.2.0"
description = "Extensible resource estimation library for services, logs, traces, and observability"
authors = [{ name="Adetayo", email="taeyoslim@gmail.com" }]
license = "MIT"
dependencies = [
  "psutil",
  "grpcio",
  "protobuf",
  "requests",
  "prometheus-api-client",
  "opentelemetry-api",
  "opentelemetry-sdk"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["restima"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"